--- a/index.html
+++ b/index.html
@@ -3864,7 +3864,7 @@
           storageBucket: '$$$$FIREBASE_STORAGE_BUCKET$$$$', 
           messagingSenderId: '$$$$FIREBASE_MESSAGING_SENDER_ID$$$$', 
           appId: '$$$$FIREBASE_APP_ID$$$$',
-          measurementId: '$$$$FIREBASE_MEASUREMENT_ID$$$$'
+          measurementId: '$$$$FIREBASE_MEASUREMENT_ID$$$$',
         };
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
 
@@ -5861,4 +5861,5 @@
         window.DOMPurify = DOMPurify;
     </script>
 </body>
+
 </html>
