--- a/index.html
+++ b/index.html
@@ -1557,7 +1557,7 @@
         }
         .batch-card-body .batch-image-container {
             width: calc(100% + 40px);
-            aspect-ratio: 16 / 9; /* MODIFIED: Set aspect ratio */
+            height: 220px;
             margin: -20px -20px 15px -20px;
             border-radius: 0;
             overflow: hidden;
@@ -1735,7 +1735,7 @@
         }
         .skeleton-batch-card .skeleton-image {
             width: 100%;
-            aspect-ratio: 16/9; /* MODIFIED: Set aspect ratio for skeleton too */
+            height: 220px;
             margin-bottom: 15px;
             border-radius: 0;
         }
@@ -2035,7 +2035,7 @@
 
         .request-image-container { /* New container for the large image */
             width: 100%;
-            aspect-ratio: 16 / 9; /* MODIFIED: Set aspect ratio */
+            height: 180px; /* Adjust height as needed */
             overflow: hidden;
             position: relative;
         }
@@ -3850,21 +3850,15 @@
         import { getFirestore, collection, query, where, addDoc, onSnapshot, orderBy } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
 
 
-        // ----------------------------------------------------------------------------------
-        // --- NEW: Environment Variables Configuration ---
-        // REPLACE THE PLACEHOLDERS BELOW (e.g., "$$$$FIREBASE_API_KEY$$$$") 
-        // with your actual environment variables in your hosting service (Render, Vercel, etc.)
-        // This makes your configuration keys secure and externalized.
-        // ----------------------------------------------------------------------------------
         const firebaseConfig = {
-          apiKey: '$$$$FIREBASE_API_KEY$$$$', 
-          authDomain: '$$$$FIREBASE_AUTH_DOMAIN$$$$', 
-          databaseURL: '$$$$FIREBASE_DATABASE_URL$$$$', 
-          projectId: '$$$$FIREBASE_PROJECT_ID$$$$',
-          storageBucket: '$$$$FIREBASE_STORAGE_BUCKET$$$$', 
-          messagingSenderId: '$$$$FIREBASE_MESSAGING_SENDER_ID$$$$', 
-          appId: '$$$$FIREBASE_APP_ID$$$$',
-          measurementId: '$$$$FIREBASE_MEASUREMENT_ID$$$$',
+          apiKey: "AIzaSyChwpbFb6M4HtG6zwjg0AXh7Lz9KjnrGZk",
+          authDomain: "adminneast.firebaseapp.com",
+          databaseURL: "https://adminneast-default-rtdb.firebaseio.com",
+          projectId: "adminneast",
+          storageBucket: "adminneast.appspot.com", 
+          messagingSenderId: "883877553418",
+          appId: "1:883877553418:web:84ce8200f4b471bfffc6f3",
+          measurementId: "G-PCH99BDF1S"
         };
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
 
@@ -5861,5 +5855,4 @@
         window.DOMPurify = DOMPurify;
     </script>
 </body>
-
 </html>
