--- a/index.html
+++ b/index.html
@@ -3377,7 +3377,7 @@
                 </div>
             </div>
 
-            <a href="https://skillneastauth.vercel.app/" target="_blank" class="generate-key-btn">
+            <a href="https://skillneastverify.vercel.app/" target="_blank" class="generate-key-btn">
                 <i class="fas fa-key"></i> Generate Access Key
             </a>
 
@@ -5856,4 +5856,5 @@
     </script>
 </body>
 </html>
+
 
